Listviews working with dummy data

--- a/Project/index.html
+++ b/Project/index.html
@@ -71,7 +71,10 @@
 			<h1>Final Project PROG3180</h1>
 		</header>
 		<section class="main" data-role="content">
-			<h1>Contacts page!</h1>		
+			<h1>Contacts page!</h1>
+			<span id="bookmarklinks"></span>
+			<div id="contactList" >
+			</div>
 		</section>
 		<footer data-role="footer" data-theme="b" data-position="fixed">			
       <div data-role="navbar" data-iconpos="top">
