--- a/Project/index.html
+++ b/Project/index.html
@@ -69,12 +69,16 @@
 	<!------ Contacts Page ------>
 	<div data-role="page" id="pageContacts">
 		<header data-role="header" data-theme="b" data-position="fixed">
-			<h1>Final Project PROG3180</h1>
+			<h1>Contacts</h1>
 		</header>
-		<section class="main" data-role="content">
-			<h1>Contacts page!</h1>
-			<span id="bookmarklinks"></span>
+		<section id="" class="main" data-role="content">
+			<form class="ui-filterable" id="searchbox">
+	  		<input id="filter" data-type="search">
+			</form>
 			<div id="contactList" >
+				<ul id="listul" data-role="listview" class="ui-listview-inset"
+								data-filter="true" data-input="#filter">	
+				</ul>
 			</div>
 		</section>
 		<footer data-role="footer" data-theme="b" data-position="fixed">			
