All pages and forms ready for db and local storage

--- a/Project/index.html
+++ b/Project/index.html
@@ -205,6 +205,26 @@
 		</header>
 		<section class="main" data-role="content">
 			<h1>Settings page!</h1>		
+			<a id="btnDatabaseClear" href="###" data-role="button"
+						data-theme="b">Clear Database</a>
+
+			<fieldset>
+				<h2 align="center">Choose A Theme</h2>
+				<input type="radio" id="radThemeDefault" name="themeChoice" 
+								value="" placeholder="" checked="checked">
+				<label for="radThemeDefault">Default</label>
+				<input type="radio" id="radThemeRed" name="themeChoice" 
+								value="" placeholder="">
+				<label for="radThemeRed">Red</label>
+				<input type="radio" id="radThemeGreen" name="themeChoice" 
+								value="" placeholder="">
+				<label for="radThemeGreen">Green</label>
+				<input type="radio" id="radThemePurple" name="themeChoice" 
+								value="" placeholder="">
+				<label for="radThemePurple">Purple</label>
+			</fieldset>
+			<a id="btnSetTheme" href="###" data-role="button"
+						data-theme="a">Set Theme</a>
 		</section>
 		<footer data-role="footer" data-theme="b" data-position="fixed">			
       <div data-role="navbar" data-iconpos="top">
