Themer works and code clean up

--- a/Project/index.html
+++ b/Project/index.html
@@ -3,6 +3,7 @@
   Purpose: Final Project for PROG3180 by Nadia Siraj & Steven Bulgin
   Revision History
    		Steven Bulgin, 2016.04.02: Created
+   		Steven Bulgin, 2016.04.04: Added setting page and add in theme css pages
 -->
 
 <!DOCTYPE html>
