Fixed some style

--- a/Project/index.html
+++ b/Project/index.html
@@ -78,7 +78,7 @@
 	  		<input id="filter" data-type="search">
 			</form>
 			<div id="contactList" >
-				<ul id="listul" data-role="listview" class="ui-listview-inset"
+				<ul id="listul" data-inset="true" data-role="listview" class="ui-listview-inset"
 								data-filter="true" data-input="#filter">	
 				</ul>
 			</div>
