--- a/Project/index.html
+++ b/Project/index.html
@@ -208,9 +208,9 @@
 		<section class="main" data-role="content">
 			<h1>Settings page!</h1>		
 			<a id="btnDatabaseClear" href="###" data-role="button"
-						data-theme="b">Clear Database</a>
+						>Clear Database</a>
 
-			<fieldset>
+			<fieldset data-role="controlgroup">
 				<h2 align="center">Choose A Theme</h2>
 				<input type="radio" id="radThemeDefault" name="themeChoice" 
 								value="default" placeholder="" checked="checked">
