Home page set up

--- a/Project/index.html
+++ b/Project/index.html
@@ -39,10 +39,16 @@
 		</header>
 		<section class="main" data-role="content">
 			<h1 >About page!</h1>
+			<h3>Nadia Siraj</h3>
+			<p>Is in her final semester as a CP student</p>
+			<h3>Steven Bulgin</h3>
+			<p>Still has a year left as a CPA student</p>
+
+			<h3>The App</h3>
 			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut varius
-				lectus eget elementum interdum. Sed vulputate erat pulvinar diam 
-				vulputate, ac vulputate tortor convallis.
+				The app formed out of the idea that it was a useful thing we could build with the skills garnered in
+				class. And a functional test bed for future ideas. Future capacities might be adding photos and
+				additional form options work, office, address fields
 			</p>
 
 		</section>
