--- a/Project/index.html
+++ b/Project/index.html
@@ -104,6 +104,43 @@
       </div>
 		</footer>
 	</div>
+<!------Page3:  Display Page ------>
+	<div data-role="page" class="backGround" id="pageDisplay">
+		<header class="header-style" data-role="header" data-position="fixed">
+			<h1>Contact Information</h1>
+		</header>
+		<section class="main" data-role="content">
+			<h1>Display page!</h1>
+			<h2 id="fname"></h2>
+			<h2 id="lname"></h2>
+			<a id="emaild" href="####" data-role="button" data-icon="plus" 
+                	data-iconpos="left"></a>
+			<a id="phoned" href="tel:" data-role="button" data-icon="plus"
+                	data-iconpos="left"></a>
+			<h2 id="relationship"></h2>
+			<h2>Notes</h2>
+			<p id="notesd"></p>
+		</section>
+		<footer data-role="footer" data-theme="b" data-position="fixed">			
+      <div data-role="navbar" data-iconpos="top">
+        <ul>
+          <li><a href="#pageHome" data-icon="home" data-theme="a" class=""
+                 data-transition="" data-rel="">Home</a></li>
+          <li><a href="#pageContacts" data-icon="bars" data-theme="a" 
+          		   class="ui-btn-active ui-state-persist" data-transition="" 
+          		   data-rel="">Contacts</a></li>
+          <li><a href="#pageAdd" data-icon="plus" data-theme="a"
+                 class=""
+                 data-transition="" data-rel="">Add</a></li>
+          <li><a href="#pageSettings" data-icon="gear" data-theme="a"
+                 class=""
+                 data-transition="" data-rel="">Settings</a></li>
+        </ul>
+      </div>
+		</footer>
+	</div>
+
+
 <!------Page3:  Details Page ------>
 	<div data-role="page" class="backGround" id="pageDetails">
 		<header class="header-style" data-role="header" data-position="fixed">
@@ -111,13 +148,7 @@
 		</header>
 		<section class="main" data-role="content">
 			<h1>Details page!</h1>
-			<p style="text-align:center"><img id="imgDisplayEdit" src="#" 
-					alt="contacts image" style="display:none;"></p>
 			<form id="frmEdit">
-
-				<label for="imgFileEdit">Image:</label>
-				<input type="file" id="imgFileEdit" name="imgFileEdit"
-								accept=".jpg,.jpeg" onchange="getImg(this, '#imgDisplayEdit');">
 				<label for="txtFirstNameEdit">First Name:</label>
 				<input type="text" id="txtFirstNameEdit" name="txtFirstName">
 				<label for ="txtLastNameEdit">Last Name:</label>
