part way on display page

--- a/Project/index.html
+++ b/Project/index.html
@@ -113,10 +113,8 @@
 			<h1>Display page!</h1>
 			<h2 id="fname"></h2>
 			<h2 id="lname"></h2>
-			<a id="emaild" href="####" data-role="button" data-icon="plus" 
-                	data-iconpos="left"></a>
-			<a id="phoned" href="tel:" data-role="button" data-icon="plus"
-                	data-iconpos="left"></a>
+			<span id="phoned"></span>
+			<span id="emaild"></span>
 			<h2 id="relationship"></h2>
 			<h2>Notes</h2>
 			<p id="notesd"></p>
