--- a/Project/index.html
+++ b/Project/index.html
@@ -35,18 +35,18 @@
 <!------Page1: Home Page ------>
 	<div data-role="page" class="backGround" id="pageHome">
 		<header class="header-style" data-role="header" data-position="fixed">
-			<h1>Final Project PROG3180</h1>
+			<h1>Contactus</h1>
 		</header>
 		<section class="main" data-role="content">
-			<h1 >About page!</h1>
+			<h1>Contactus</h1>
 			<h3>Nadia Siraj</h3>
 			<p>Is in her final semester as a CP student</p>
 			<h3>Steven Bulgin</h3>
 			<p>Still has a year left as a CPA student</p>
 
-			<h3>The App</h3>
+			<h3>Contactus</h3>
 			<p>
-				The app formed out of the idea that it was a useful thing we could build with the skills garnered in
+				Contactus formed out of the idea that it was a useful thing we could build with the skills garnered in
 				class. And a functional test bed for future ideas. Future capacities might be adding photos and
 				additional form options work, office, address fields
 			</p>
